--- a/weekOne/pong/pong.css
+++ b/weekOne/pong/pong.css
@@ -1,5 +1,20 @@
 @charset "UTF-8";
 
+
+
+section{
+    display: flex;
+    justify-content: center;
+    
+    font-size: 50px;
+    height: 60px;
+    width:800px;
+    border:1px solid red;
+    padding:0px;
+
+}
+
+
 canvas{
     border:1px solid black;
 }
