--- a/WeekThree/Pong/se251pong_w3_start_files/pong.css
+++ b/WeekThree/Pong/se251pong_w3_start_files/pong.css
@@ -45,6 +45,12 @@ canvas{
     width: 400px;
     color:#ffffff;
     display:grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto 25px;
     
+}
+
+.output{
+    padding-left:10px;
+    background-color: white;
+    color:black;
 }
