--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -31,22 +31,52 @@ nav{
     position: fixed;
     
 }
+
+nav div{
+    margin: 10px;
+    width: 100%;
+    
+    border:1px solid black;
+    display:flex;
+    justify-content: space-between;
+}
+
 article{
     padding-top: 50px;
     background-color: black;
     color:white;
-    height: 40%;
+    height: 60%;
 }
 main{
     display: flex;
+    justify-content: space-between;
+    /* flex-direction: column; */
     height: 100%;
     background-color: blueviolet;
 }
+content{
+    /* width:70%; */
+    width: 25%;
+    border: 1px solid blue
+}
 section{
-    background-color: chartreuse;
-    height:30%;
-    width: 20px;
-    
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    background-color: blanchedalmond ;
+    /* padding goes on the inside */
+    padding: 10px;
+}
+
+section div{
+    background-color: green;
+    height: 100%;
+    margin: 10px;
+}
+aside{
+    width: 25%;
+    border: 1px solid red
 }
 footer{
     
