--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -5,6 +5,8 @@
     display: none;
     }
 } */
+
+/* this is Just the html and other */
 html{
     height: 100%;
     background-color: black;
@@ -18,52 +20,57 @@ body{
     padding: 0px;
     height:100%;
     margin: 0%;
-    border: 1px solid black;
+    border: 1px solid white;
 }
+/* this is the nav section of the code */
 nav{
     background-color: aqua;
     height: 50px;
     width: 100%;
-    border: 2px solid black;
+    border: 2px solid white;
     
     padding: 0%;
     display: flex;
     position: fixed;
     
 }
-
 nav div{
     margin: 10px;
     width: 100%;
     
-    border:1px solid black;
+    border:1px solid white;
     display:flex;
     justify-content: space-between;
 }
 
-article{
+/* This is the slide shows css*/
+#slideShowArtical{
     
-    padding-top: 50px;
+    padding-top: 70px;
     padding-bottom: 50px;
-    background-color: black;
+    /* background-color: black; */
     color:white;
     height: 60%;
-    border:1px solid green;
+    border:1px solid white;
     display:flex;
 }
 
-article section{
+#SlideShowSection{
     width: 100%;
-    margin: 20px;
+    margin: 10px;
     height: 100%;
-    
+    border:1px solid white;
     background-color: orange;
 }
 
 
+#slideShowDisplay{
+    background-color: pink !important;
+}
 
 
 
+/* this is going to be the whole section for the MAIN css*/
 main{
     display: flex;
     justify-content: space-between;
@@ -95,6 +102,10 @@ aside{
     width: 25%;
     border: 1px solid red
 }
+
+
+
+/* this is the start of the footers css. */
 footer{
     
     background-color: red;
