--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -43,7 +43,14 @@ nav div{
     justify-content: space-between;
 }
 
+
+
+
+
+
+
 /* This is the slide shows css*/
+/* this is just the artical */
 #slideShowArtical{
     
     padding-top: 70px;
@@ -53,20 +60,45 @@ nav div{
     height: 60%;
     border:1px solid white;
     display:flex;
+    background: gray;
 }
 
+/* this is the orange section */
 #SlideShowSection{
     width: 100%;
     margin: 10px;
     height: 100%;
-    border:1px solid white;
+    
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    overflow: hidden;
+    border:1px solid green;
     background-color: orange;
 }
 
-
-#slideShowDisplay{
+/* this is the pink section */
+/* changed to class */
+.slideShowDisplay{
+    /* display: flex; */
+    width: 200px;
     background-color: pink;
 }
+
+
+
+.slideShowDiv{
+    display: flex;
+    height: inherit;
+    
+    
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: black;
+
+}
+
+
 
 
 
