--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -28,7 +28,6 @@ nav{
     height: 50px;
     width: 100%;
     border: 2px solid white;
-    
     padding: 0%;
     display: flex;
     position: fixed;
@@ -37,7 +36,6 @@ nav{
 nav div{
     margin: 10px;
     width: 100%;
-    
     border:1px solid white;
     display:flex;
     justify-content: space-between;
@@ -49,10 +47,9 @@ nav div{
 
 
 
-/* This is the slide shows css*/
+/* ################################This is the slide shows css#######################################################*/
 /* this is just the artical */
 #slideShowArtical{
-    
     padding-top: 70px;
     padding-bottom: 50px;
     /* background-color: black; */
@@ -62,12 +59,11 @@ nav div{
     display:flex;
     background: gray;
 }
-
 /* this is the orange section */
 #SlideShowSection{
     width: 100%;
     margin: 10px;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -80,7 +76,6 @@ nav div{
 
 
 
-
 /* this is the pink section */
 /* changed to class */
 .slideShowDisplay{
@@ -89,64 +84,43 @@ nav div{
     margin: 0px; */
     width: 200px;
     background-color: pink;
-    height: 80%;
-    
-
-    /* @media (width > 1000px) {
-        .slideShowDisplay {
-            height: 100000000px;
-        }
-    } */
-
+    height: inherit;
 }
 
-/* .slideShowDisplay {
-    animation: vibrate 0.3s linear infinite both;
-} */
-
-/* @media (width > 1000px) {
-    .slideShowDisplay {
-        height: 100000000px;
-    }
-} */
-
-
+/* This is the whole item, this is whats being created in the java */
 .slideShowDiv{
     display: flex;
     height: inherit;
-
-
-    
-    
     flex-direction: column;
     justify-content: space-between;
-    
     background-color: black;
-
 }
 
-
+/* ##################----this is just for styling inside the items -------##############*/
 .projectLabel{
-    height: 100%;
+    height: inherit;
     display: flex;
     justify-content: center;
     padding: 0px;
     margin: 0px;
-
     background-color: red;
 }
-
-
 .projectImage{
-    height: 100%;
+    height: inherit;
     background-color: white;
 }
-
 .projectButton{
-
-    height: 30%;
-
+    height: inherit;
 }
+
+
+
+
+
+/* now this is the section of the project that will have the changing for the */
+
+
+
 
 
 /* this is going to be the whole section for the MAIN css*/
